<?php
return [
    'Mobiplas\PinChangeConfirmRequest'=>'/usr/share/nginx/html/php-protobuf-master/Mobiplas/PinChangeConfirmRequest.php',
    'Mobiplas\Fault'=>'/usr/share/nginx/html/php-protobuf-master/Mobiplas/Fault.php',
    'Mobiplas\LoginRequest'=>'/usr/share/nginx/html/php-protobuf-master/Mobiplas/LoginRequest.php',
    'Mobiplas\Response'=>'/usr/share/nginx/html/php-protobuf-master/Mobiplas/Response.php',
    'Mobiplas\MobiplasPacketProto\RequestId'=>'/usr/share/nginx/html/php-protobuf-master/Mobiplas/MobiplasPacketProto/RequestId.php',
    'Mobiplas\RegistrationRequest'=>'/usr/share/nginx/html/php-protobuf-master/Mobiplas/RegistrationRequest.php',
    'Mobiplas\MobiplasPacketProto'=>'/usr/share/nginx/html/php-protobuf-master/Mobiplas/MobiplasPacketProto.php',
    'Mobiplas\PinsetConfirmRequest'=>'/usr/share/nginx/html/php-protobuf-master/Mobiplas/PinsetConfirmRequest.php',
    'Mobiplas\autoload'=>'/usr/share/nginx/html/php-protobuf-master/Mobiplas/autoload.php',
    'Mobiplas\Mobiplas'=>'/usr/share/nginx/html/php-protobuf-master/Mobiplas/Mobiplas.php',
    'Mobiplas\PinchangeRequest'=>'/usr/share/nginx/html/php-protobuf-master/Mobiplas/PinchangeRequest.php',
    'Mobiplas\PinsetRequest'=>'/usr/share/nginx/html/php-protobuf-master/Mobiplas/PinsetRequest.php',
];
?>
